# ci-build

./: .gitignore  Makefile.am  make_deb.sh  make_deb_inc.sh  make_package.c  make_remote_doc_upload.sh  make_remote_download.sh
data/: .gitlab-ci.yml  Dockerfile  build-ubuntu.sh  ci-build.sh
data/ci-centos/: Dockerfile
data/ci-opensuse/: Dockerfile
data/ci-ubuntu/: Dockerfile
nbproject/: configurations.xml  project.xml
