AM_CFLAGS = \
	 -g -Wall \
	 -I../src 
	
#	 -I/usr/include/teonet/ 
#	 -I$(HOME)/Projects/teonet/src 
#	 -I$(HOME)/Projects/teonet/embedded/libpbl/src 
#	 -I$(HOME)/Projects/teonet/embedded/teocli/libteol0

noinst_PROGRAMS = make_package
make_package_SOURCES = make_package.c

#EXTRA_DIST = make_deb.sh 
